--- a/later.html
+++ b/later.html
@@ -20,18 +20,7 @@
             var formatMonth = d3.timeFormat("%B");
             var formatDay = d3.timeFormat("%d");
             var formatMonthNum = d3.timeFormat("%m");
-
-
-
-            let tooltip = d3.select('body')
-                .append('div')
-                .style('position', 'absolute')
-                .style('z-index', '10')
-                .style('color', '#3497db')
-                .style('visibility', 'hidden') // 是否可见（一开始设置为隐藏）
-                .style('font-size', '12px')
-                .style('font-weight', 'bold')
-                .text('')
+            var formatDate = d3.timeFormat("%Y-%m");
 
             const svg = d3.select('#mainsvg');
             const width = +svg.attr('width');
@@ -65,7 +54,6 @@
 
             }
 
-
             const renderinit = function (data) {
                 const xScale = d3.scaleBand().
                     domain(data.map(datum => datum.year)).
@@ -84,36 +72,23 @@
                 for (let i = 2008; i <= d3.max(data, datum => +datum.year); i++) {
                     for (let j = d3.min(data, datum => +datum.monthNum); j <= d3.max(data, datum => datum.monthNum); j++) {
                         var groupData = data.filter(datum => (+datum.year === i && +datum.monthNum === j));
+                        // console.log(groupData);
+                        var monthMax = d3.max(groupData, datum => +datum.max_temperature);
                         if (groupData.length !== 0) {
-                            g.append('rect')
+                            var monthData = [{ monthDate: groupData[0].yearMonth, month: groupData[0].month, max: d3.max(groupData, datum => +datum.max_temperature), year: groupData[0].year }]
+
+                                g
+                                .append('rect')
+                                .data(monthData)
+                                .attr('id', `rect${(j - 1) * 10 + (i - 2007)}`)
+                                .attr('x', d => xScale(d.year))
+                                .attr('y', d => yScale(d.month))
                                 .attr('width', xScale.bandwidth())
-                                .attr('x', xScale(groupData[0].year))
                                 .attr('height', yScale.bandwidth())
-                                .attr('y', yScale(groupData[0].month))
                                 .attr('fill', d3.hsl(zScale(d3.max(groupData, datum => +datum.max_temperature)), 0.9, 0.5))
                                 .attr('opacity', '0.8')
-                                // .on('mouseover', function (d, i) {
-                                //     console.log(d);
-                                //     console.log(i);
-                                //     // var rec0=d3.select(this);
-                                //     // console.log(rec0);
-                                //     // console.log(groupData);
-                                //     return tooltip.style('visibility', 'visible').text('hello')
-                                // })
 
-                                // .on('mousemove', function (d, i) {
-
-                                //     return tooltip.style('top', (event.pageY - 10) + 'px').style('left', (event.pageX + 10) + 'px')
-
-                                // })
-
-                                // .on('mouseout', function (d, i) {
-
-                                //     return tooltip.style('visibility', 'hidden')
-
-                                // })
-
-                            var g0 = g.append('g')
+                            var g0 = g.append('g').attr('id', `gName${(j - 1) * 10 + (i - 2007)}`).data(monthData)
                                 .attr('transform', `translate(${xScale(groupData[0].year)}, ${yScale(groupData[0].month)})`);
 
                             const subXScale = d3.scaleTime()
@@ -140,6 +115,8 @@
                                     return subYScale(d.min_temperature);
                                 });
 
+                            let monthlyMax = 0;
+
                             g0.append("path")
                                 .datum(groupData)
                                 .attr("fill", "none")
@@ -147,7 +124,21 @@
                                 .attr("stroke-width", 1.5)
                                 .attr("stroke-linejoin", "round")
                                 .attr("stroke-linecap", "round")
-                                .attr("d", line1);
+                                .attr("d", line1)
+                                .on('mouseover', function (d, i) {
+                                    d3.select(d.path['1']).append('text').attr("id", "tooltip")
+                                        .text(function (d) {
+                                            return "date:" + d.monthDate + "max:" + d.max;
+                                        })
+                                        .attr('x', '0')
+                                        .attr('y', '0')
+                                        .attr('font-size', '12px')
+                                        .attr('fill', 'black')
+
+                                })
+                                .on('mouseout', function (d) {
+                                    d3.select("#tooltip").remove();
+                                });
 
                             g0.append("path")
                                 .datum(groupData)
@@ -158,8 +149,6 @@
                                 .attr("stroke-linecap", "round")
                                 .attr("d", line2);
                         }
-
-                        var recs=g.selectAll("rec")
                     }
                 }
 
@@ -192,6 +181,7 @@
                     d['month'] = formatMonth(parseTime(d['date']));
                     d['monthNum'] = formatMonthNum(parseTime(d['date']));
                     d['day'] = formatDay(parseTime(d['date']));
+                    d['yearMonth'] = formatDate(parseTime(d['date']));
                 });
                 data = data.filter(datum => (+datum.year >= 2008));
                 renderinit(data);
