--- a/index.html
+++ b/index.html
@@ -1,39 +1,248 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>我的测试页面</title>
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=New+Tegomin&display=swap" rel="stylesheet">
+
+<head>
+    <title>monthlyHeat</title>
+</head>
+<style>
+    .d3-tip {
+        line-height: 1;
+        font-weight: bold;
+        padding: 12px;
+        background: rgba(0, 0, 0, 0.8);
+        color: #fff;
+        border-radius: 2px;
+    }
+
+    /* Creates a small triangle extender for the tooltip */
+    .d3-tip:after {
+        box-sizing: border-box;
+        display: inline;
+        font-size: 10px;
+        width: 100%;
+        line-height: 1;
+        color: rgba(0, 0, 0, 0.8);
+        content: "\25BC";
+        position: absolute;
+        text-align: center;
+    }
+
+    /* Style northward tooltips differently */
+    .d3-tip.n:after {
+        margin: -1px 0 0 0;
+        top: 100%;
+        left: 0;
+    }
+</style>
+
+<body>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-  </head>
-  <body>
-    <svg width="960" height="500" id="msinsvg" class="svgs"></svg>
-    <img src="images\OIP (1).jpeg" alt="我的测试页面">
-    <h1>The standard of justice is based on equal force</h1>
-    <p> 侑子小姐美艳动人</p>
-    <p> 科林斯</p>
-    <ul>
-        <li>暂缓与亚哥斯结盟</li>
-        <li>不加入四国同盟</li>
-        <li>增进与斯巴达的关系</li>
-        <li>在斯巴达和亚哥斯之间摇摆</li>
-    </ul>
-    <a href="https://tigerruanyifan.github.io/">ryf的网站</a>
-    <script>
-      let mainsvg=d3.select('.svgs');
+    <script src="https://unpkg.com/d3-v6-tip@1.0.6/build/d3-v6-tip.js"></script>
+    <script src="https://d3js.org/d3-color"></script>
+    <script src="https://d3js.org/d3-time-format"></script>
+    <csv src="data\temperature_daily.csv">
+        <h1>Month Heat Map of Hongkong</h1>
+        <svg width="1200" height="800" id="mainsvg" class="svgs"></svg>
 
-      let maingroup=mainsvg
-      .append('g')
-      .attr('transform', 'translate(100,100)');
+        <script>//forEach
+            const tip = d3.tip()
+                .attr('class', 'd3-tip')
+                .offset([-10, 0])
+                .html(function (event, d) {
+                    return "date:" + d.monthDate + " max:" + d.max + " min:" + d.min;
+                })
+            var parseTime = d3.timeParse("%Y-%m-%d");
+            var formatYear = d3.timeFormat("%Y");
+            var formatMonth = d3.timeFormat("%B");
+            var formatDay = d3.timeFormat("%d");
+            var formatMonthNum = d3.timeFormat("%m");
+            var formatDate = d3.timeFormat("%Y-%m");
 
-      let circle = maingroup
-      .append('circle')
-      .attr('stroke','black')
-      .attr('r','66')
-      .attr('fill','yellow');
-    </script>
-  </body>
-</html> 
+            const svg = d3.select('#mainsvg');
+            const width = +svg.attr('width');
+            const height = +svg.attr('height');
+            const margin = { top: 70, right: 150, bottom: 60, left: 150 };
+            const innerWidth = width - margin.left - margin.right;
+            const innerHeight = height - margin.top - margin.bottom;
+
+            svg.call(tip);
+
+            const g = svg.append('g').attr('id', 'maingroup')
+                .attr('transform', `translate(${margin.left}, ${margin.top})`);
+
+            const g2 = svg.append('g').attr('id', 'colourScale')
+                .attr('transform', `translate(${innerWidth + margin.left}, ${margin.top})`)
+
+            for (let i = 0; i <= 7; i++) {
+                g2.append('rect')
+                    .attr('width', '30')
+                    .attr('y', `${i * 20}`)
+                    .attr('height', '20')
+                    .attr('fill', `${d3.hsl((7 - i) * 30, 0.9, 0.5)}`)
+                    .attr('opacity', '0.8')
+                //         .on('click',function(d){
+                //     console.log('over');
+                //     console.log(this.opacity);filter
+                // })
+
+                g2.append('text')
+                    .text(`${i * 5}`)
+                    .attr('x', '30')
+                    .attr('y', `${i * 20}`)
+                    .attr('font-size', '12px')
+                    .attr('fill', 'black')
+
+            }
+
+            const renderinit = function (data) {
+                const xScale = d3.scaleBand().
+                    domain(data.map(datum => datum.year)).
+                    range([0, innerWidth])
+                    .padding(0.1);
+
+                const yScale = d3.scaleBand().
+                    domain(data.map(datum => datum.month)).
+                    range([0, innerHeight])
+                    .padding(0.1);
+
+                const zScale = d3.scaleLinear()
+                    .domain([0, 40])
+                    .range([240, 0]);
+
+                for (let i = 2008; i <= d3.max(data, datum => +datum.year); i++) {
+                    for (let j = d3.min(data, datum => +datum.monthNum); j <= d3.max(data, datum => datum.monthNum); j++) {
+                        var groupData = data.filter(datum => (+datum.year === i && +datum.monthNum === j));
+                        // console.log(groupData);
+                        if (groupData.length !== 0) {
+                            var monthData = [{
+                                monthDate: groupData[0].yearMonth, month: groupData[0].month, max: d3.max(groupData, datum => +datum.max_temperature), year: groupData[0].year,
+                                min: d3.max(groupData, datum => +datum.min_temperature)
+                            }]
+
+                            g//foreach
+                                .append('rect')
+                                .attr('class', 'maxGroup')
+                                .data(monthData)
+                                .attr('id', `rect${(j - 1) * 10 + (i - 2007)}`)
+                                .attr('x', d => xScale(d.year))
+                                .attr('y', d => yScale(d.month))
+                                .attr('width', xScale.bandwidth())
+                                .attr('height', yScale.bandwidth())
+                                .attr('fill', d3.hsl(zScale(d3.max(groupData, datum => +datum.max_temperature)), 0.9, 0.5))
+                                .attr('opacity', '0.8')
+
+                            g
+                                .append('rect')
+                                .attr('class', 'minGroup')
+                                .data(monthData)
+                                .attr('id', `rect${(j - 1) * 10 + (i - 2007) + 200}`)
+                                .attr('x', d => xScale(d.year))
+                                .attr('y', d => yScale(d.month))
+                                .on('mouseover', (event, d) => {
+                                    tip.show(event, d);
+                                }).on('mouseout', tip.hide)
+                                .attr('width', xScale.bandwidth())
+                                .attr('height', yScale.bandwidth())
+                                .attr('fill', d3.hsl(zScale(d3.max(groupData, datum => +datum.min_temperature)), 0.9, 0.5))
+                                .attr('opacity', '0')
+
+                            var g0 = g.append('g').attr('id', `gName${(j - 1) * 10 + (i - 2007)}`).data(monthData)
+                                .attr('transform', `translate(${xScale(groupData[0].year)}, ${yScale(groupData[0].month)})`);
+
+                            const subXScale = d3.scaleTime()
+                                .domain([d3.min(groupData, d => parseTime(d.date)), d3.max(groupData, d => parseTime(d.date))])
+                                .range([0, xScale.bandwidth()]);
+
+                            const subYScale = d3.scaleLinear()
+                                .domain([d3.max(data, datum => +datum.max_temperature), d3.min(data, datum => +datum.min_temperature)])
+                                .range([0, yScale.bandwidth()])
+
+                            var line1 = d3.line()
+                                .x(function (d) {
+                                    return subXScale(parseTime(d.date));
+                                })
+                                .y(function (d) {
+                                    return subYScale(d.max_temperature);
+                                });
+
+                            var line2 = d3.line()
+                                .x(function (d) {
+                                    return subXScale(parseTime(d.date));
+                                })
+                                .y(function (d) {
+                                    return subYScale(d.min_temperature);
+                                });
+
+                            g0.append("path")
+                                .datum(groupData)
+                                .attr("fill", "none")
+                                .attr("stroke", "DarkOrchid")
+                                .attr("stroke-width", 1.5)
+                                .attr("stroke-linejoin", "round")
+                                .attr("stroke-linecap", "round")
+                                .attr("d", line1)
+
+                            g0.append("path")
+                                .datum(groupData)
+                                .attr("fill", "none")
+                                .attr("stroke", "RoyalBlue")
+                                .attr("stroke-width", 1.5)
+                                .attr("stroke-linejoin", "round")
+                                .attr("stroke-linecap", "round")
+                                .attr("d", line2);
+                        }
+                    }
+                }
+
+                //the following four lines of code is the simplest pattern of adding axis; 
+                const yAxis = d3.axisLeft(yScale);
+                const xAxis = d3.axisTop(xScale);
+                g.append('g').call(yAxis);
+                g.append('g').call(xAxis);
+
+                const yAxisGroup = g.append('g').call(yAxis)
+                    .attr('id', 'yaxis')
+                    .text('month')
+                    .attr('font-size', '3em')
+                    .attr('transform', 'rotate(-90)') // y-axis label needs an additional transform; 
+                    .attr('x', -innerHeight / 2)
+                    .attr('y', -120)
+                    .attr('fill', 'black')
+                const xAxisGroup = g.append('g').call(xAxis)
+                    .attr('id', 'xaxis')
+                    .text('year')
+                    .attr('font-size', '3em')
+                    .attr('x', innerWidth / 2)
+                    .attr('y', 50)
+                    .attr('fill', 'black');
+            }
+
+            d3.csv('data/temperature_daily.csv').then(data => {
+                data.forEach(d => {
+                    d['year'] = formatYear(parseTime(d['date']));
+                    d['month'] = formatMonth(parseTime(d['date']));
+                    d['monthNum'] = formatMonthNum(parseTime(d['date']));
+                    d['day'] = formatDay(parseTime(d['date']));
+                    d['yearMonth'] = formatDate(parseTime(d['date']));
+                });
+                data = data.filter(datum => (+datum.year >= 2008));
+                renderinit(data);
+            })
+
+            d3.select('#maingroup')
+                .on('click', function (d, i) {
+                    d3.selectAll('.minGroup').attr('opacity', '0.8');
+                    d3.selectAll('.maxGroup').attr('opacity', '0');
+                })
+
+            d3.selectAll('.minGroup').on('click', function (d) {
+                console.log('over');
+                console.log(this.opacity);
+            })
+
+
+
+        </script>
+</body>
+
+</html>
